# PoEOverlay

./: .gitignore  CMakeLists.txt  readme.md  vcpkg.json
include/browser/: BrowserClient.h  BrowserHandler.h  BrowserInterface.h  BrowserView.h  CefApp.h  CefManager.h  RenderHandler.h  ResourceHandler.h
include/core/: Application.h  ErrorHandler.h  EventSystem.h  Logger.h  Settings.h
include/process/: focus_tracker.h  input_state_manager.h  process_detector.h  window_state_tracker.h
include/rendering/: animation_manager.h  border_renderer.h  composite_renderer.h  overlay_renderer.h  z_order_manager.h
include/window/: input_handler.h  monitor_info.h  overlay_window.h  window_manager.h
src/: main.cpp
src/browser/: BrowserClient.cpp  BrowserHandler.cpp  BrowserInterface.cpp  BrowserView.cpp  CefApp.cpp  CefManager.cpp  RenderHandler.cpp  ResourceHandler.cpp  cef_subprocess.cpp
src/core/: Application.cpp  ErrorHandler.cpp  EventSystem.cpp  Logger.cpp  Settings.cpp
src/process/: focus_tracker.cpp  input_state_manager.cpp  process_detector.cpp  window_state_tracker.cpp
src/rendering/: animation_manager.cpp  border_renderer.cpp  composite_renderer.cpp  overlay_renderer.cpp  z_order_manager.cpp
src/window/: input_handler.cpp  monitor_info.cpp  overlay_window.cpp  window_manager.cpp
